add changeSubs and getHistorySubs
